--- a/신한카드_데이터_기초_통계.ipynb
+++ b/신한카드_데이터_기초_통계.ipynb
@@ -6,7 +6,7 @@
       "name": "신한카드 데이터 기초 통계.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMwWufTSQiIT2tCJVW7JDet",
+      "authorship_tag": "ABX9TyM6P+EFehpCqmFJMVkYO9cW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,13 +34,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 122
         },
-        "outputId": "327d45ff-062c-4ded-d657-fcc6bb09152b"
+        "outputId": "4ab476e1-990b-48d3-be7f-d8b6d4684727"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/gdrive')"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,9 +62,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 102
+          "height": 255
         },
-        "outputId": "77b038a8-38f4-41e7-87d6-5dc34e79874d"
+        "outputId": "a3a9201e-0eda-4f1e-e15a-67daf67eac96"
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -85,11 +85,20 @@
         {
           "output_type": "stream",
           "text": [
-            "fonts-nanum is already the newest version (20170925-1).\n",
             "The following package was automatically installed and is no longer required:\n",
             "  libnvidia-common-440\n",
             "Use 'apt autoremove' to remove it.\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 35 not upgraded.\n"
+            "The following NEW packages will be installed:\n",
+            "  fonts-nanum\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 35 not upgraded.\n",
+            "Need to get 9,604 kB of archives.\n",
+            "After this operation, 29.5 MB of additional disk space will be used.\n",
+            "Selecting previously unselected package fonts-nanum.\n",
+            "(Reading database ... 144465 files and directories currently installed.)\n",
+            "Preparing to unpack .../fonts-nanum_20170925-1_all.deb ...\n",
+            "Unpacking fonts-nanum (20170925-1) ...\n",
+            "Setting up fonts-nanum (20170925-1) ...\n",
+            "Processing triggers for fontconfig (2.12.6-0ubuntu2) ...\n"
           ],
           "name": "stdout"
         }
@@ -1225,6 +1234,7 @@
       },
       "source": [
         "import pandas as pd\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "df20 = pd.read_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/신한카드/신한카드 데이터/KCTI_NATIVE_2020.txt\", sep = \"|\", encoding = 'cp949')\n",
@@ -1249,7 +1259,7 @@
         "df19 = df19.rename({\"vlm\":\"vlm19\",\"usec\":\"usec19\"},axis=\"columns\")\n",
         "del df19['v1']"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1262,9 +1272,22 @@
       "source": [
         "df = pd.merge(df20, df19, on=['v2','v3','gb3','gb2','sex_ccd','cln_age_r','ta_ym','daw_ccd_r','apv_ts_dl_tm_r'], how='outer')\n",
         "\n",
-        "df = df.dropna(axis=0)\n",
+        "df = df.dropna(axis=0)"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ds6t-wFb8f6y",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df['vlm_ratio'] = (df[\"vlm20\"]-df[\"vlm19\"])/df[\"vlm19\"]\n",
         "\n",
-        "print(df)"
+        "df = df.dropna(axis=0)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1277,7 +1300,15 @@
         "colab": {}
       },
       "source": [
-        ""
+        "Q1 = np.percentile(df['vlm_ratio'], 25)\n",
+        "Q3 = np.percentile(df['vlm_ratio'], 75)\n",
+        "IQR = Q3 - Q1\n",
+        "outlier_step = 1.5 * IQR\n",
+        "\n",
+        "df[(df['vlm_ratio'] > Q1 - outlier_step) and (df['vlm_ratio'] < Q3 + outlier_step)]\n",
+        "\n",
+        "print(Q1)\n",
+        "print(Q3)"
       ],
       "execution_count": null,
       "outputs": []
