--- a/코로나_데이터_기초_통계.ipynb
+++ b/코로나_데이터_기초_통계.ipynb
@@ -6,7 +6,7 @@
       "name": "코로나 데이터 기초 통계.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP5hWvxoE0mp1kN4gRMVRRc",
+      "authorship_tag": "ABX9TyMQKtviBt8Lk18nMnM9kQeV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 122
         },
-        "outputId": "80178534-9f87-4277-8488-866ed00334f8"
+        "outputId": "244db934-ca99-46dc-c317-f37d87333a46"
       },
       "source": [
         "from google.colab import drive\n",
@@ -62,9 +62,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 102
+          "height": 255
         },
-        "outputId": "4949d1b4-11ad-4864-f89b-b48db9fe20d1"
+        "outputId": "7f6139c8-b442-4df3-d2ff-d058c3626708"
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -82,16 +82,25 @@
         "\n",
         "plt.rcParams[\"figure.figsize\"] = (10,10)"
       ],
-      "execution_count": 32,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fonts-nanum is already the newest version (20170925-1).\n",
             "The following package was automatically installed and is no longer required:\n",
             "  libnvidia-common-440\n",
             "Use 'apt autoremove' to remove it.\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 35 not upgraded.\n"
+            "The following NEW packages will be installed:\n",
+            "  fonts-nanum\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 35 not upgraded.\n",
+            "Need to get 9,604 kB of archives.\n",
+            "After this operation, 29.5 MB of additional disk space will be used.\n",
+            "Selecting previously unselected package fonts-nanum.\n",
+            "(Reading database ... 144465 files and directories currently installed.)\n",
+            "Preparing to unpack .../fonts-nanum_20170925-1_all.deb ...\n",
+            "Unpacking fonts-nanum (20170925-1) ...\n",
+            "Setting up fonts-nanum (20170925-1) ...\n",
+            "Processing triggers for fontconfig (2.12.6-0ubuntu2) ...\n"
           ],
           "name": "stdout"
         }
@@ -106,7 +115,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 255
         },
-        "outputId": "e1f3c9b3-7623-4dc7-9651-355bad330651"
+        "outputId": "90ca9780-044d-4e6c-e01f-11bb88334de4"
       },
       "source": [
         "import pandas as pd\n",
@@ -116,7 +125,7 @@
         "\n",
         "print(df_SeoulFloating)"
       ],
-      "execution_count": 39,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +158,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "ae4ba4dd-b7d0-4c35-d129-0b1bc0c19e7e"
+        "outputId": "693fcd10-a49a-4996-f901-620740cf09d8"
       },
       "source": [
         "import pandas as pd\n",
@@ -173,8 +182,15 @@
         "plt.legend([\"deceased\"])\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": 4,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "findfont: Font family ['NanumBarunGothic'] not found. Falling back to DejaVu Sans.\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -257,7 +273,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 829
         },
-        "outputId": "2b7fbb81-ac52-4d4a-e995-fa69407a7bc8"
+        "outputId": "0b358f62-e737-4ccd-ce56-2304de74ccc9"
       },
       "source": [
         "import pandas as pd\n",
@@ -289,7 +305,7 @@
         "plt.legend([\"0s\",\"10s\",\"20s\",\"30s\",\"40s\",\"50s\",\"60s\",\"70s\",\"80s\"])\n",
         "plt.show()"
       ],
-      "execution_count": 35,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +355,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "91b785e4-229f-4b90-9821-39b25348fb63"
+        "outputId": "9d998165-c440-4796-b3b3-dabb4651d2eb"
       },
       "source": [
         "import pandas as pd\n",
@@ -362,7 +378,7 @@
         "plt.legend([\"male\",\"female\"])\n",
         "plt.show()"
       ],
-      "execution_count": 36,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +445,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 866
         },
-        "outputId": "128c83da-498b-4422-c2cb-dbecf8cdfaaf"
+        "outputId": "ffae6e80-53a8-471a-fa6a-7b93ab562567"
       },
       "source": [
         "import pandas as pd\n",
@@ -478,7 +494,7 @@
         "plt.legend(['Daegu', 'Jeollanam-do', 'Gwangju', 'Seoul', 'Jeollabuk-do', 'Incheon', 'Busan', 'Sejong', 'Gyeonggi-do', 'Ulsan', 'Chungcheongbuk-do', 'Jeju-do', 'Gyeongsangbuk-do', 'Daejeon', 'Chungcheongnam-do', 'Gyeongsangnam-do', 'Gangwon-do'])\n",
         "plt.show()"
       ],
-      "execution_count": 37,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,7 +513,7 @@
             "2770  2020-06-30     0           Jeju-do         19        16         0\n",
             "\n",
             "[2771 rows x 6 columns]\n",
-            "['Daegu', 'Jeollanam-do', 'Gwangju', 'Seoul', 'Jeollabuk-do', 'Incheon', 'Busan', 'Sejong', 'Gyeonggi-do', 'Ulsan', 'Chungcheongbuk-do', 'Jeju-do', 'Gyeongsangbuk-do', 'Daejeon', 'Chungcheongnam-do', 'Gyeongsangnam-do', 'Gangwon-do']\n"
+            "['Sejong', 'Jeju-do', 'Jeollabuk-do', 'Jeollanam-do', 'Daejeon', 'Busan', 'Daegu', 'Gwangju', 'Gangwon-do', 'Ulsan', 'Chungcheongnam-do', 'Seoul', 'Gyeonggi-do', 'Gyeongsangnam-do', 'Incheon', 'Chungcheongbuk-do', 'Gyeongsangbuk-do']\n"
           ],
           "name": "stdout"
         },
@@ -517,6 +533,125 @@
             },
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ivmMqJa6hwv9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "a44cfe41-17f2-4dc5-8d9f-50b599245b73"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "df_Time = pd.read_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/코로나/Data Science for COVID-19 (DS4C)/Time.csv\", encoding = 'cp949')\n",
+        "\n",
+        "df_Time = df_Time[(df_Time[\"date\"]==\"2020-02-29\") | (df_Time[\"date\"]==\"2020-03-31\") | (df_Time[\"date\"]==\"2020-04-30\") | (df_Time[\"date\"]==\"2020-05-31\") | (df_Time[\"date\"]==\"2020-06-30\")]\n",
+        "\n",
+        "for i in range(len(df_Time)):\n",
+        "    df_Time.iloc[i,0] = df_Time.iloc[i,0][-4]\n",
+        "\n",
+        "df_Time[\"test_cum\"] = df_Time[\"test\"]\n",
+        "df_Time[\"negative_cum\"] = df_Time[\"negative\"]\n",
+        "df_Time[\"confirmed_cum\"] = df_Time[\"confirmed\"]\n",
+        "df_Time[\"released_cum\"] = df_Time[\"released\"]\n",
+        "df_Time[\"deceased_cum\"] = df_Time[\"deceased\"]\n",
+        "\n",
+        "for i in range(len(df_Time)-1):\n",
+        "    df_Time.iloc[i+1,2:7] = df_Time.iloc[i+1,2:7] - df_Time.iloc[i,2:7]\n",
+        "\n",
+        "del df_Time[\"time\"]\n",
+        "\n",
+        "print(df_Time)\n",
+        "\n",
+        "df_TimeProvince = pd.read_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/코로나/Data Science for COVID-19 (DS4C)/TimeProvince.csv\", encoding = 'cp949')\n",
+        "\n",
+        "df_TimeProvince = df_TimeProvince[(df_TimeProvince[\"date\"]==\"2020-02-29\") | (df_TimeProvince[\"date\"]==\"2020-03-31\") | (df_TimeProvince[\"date\"]==\"2020-04-30\") | (df_TimeProvince[\"date\"]==\"2020-05-31\") | (df_TimeProvince[\"date\"]==\"2020-06-30\")]\n",
+        "\n",
+        "for i in range(len(df_TimeProvince)):\n",
+        "    df_TimeProvince.iloc[i,0] = df_TimeProvince.iloc[i,0][-4]\n",
+        "\n",
+        "for i in range(len(df_TimeProvince)):\n",
+        "    if df_TimeProvince.iloc[i,2] == \"Seoul\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"서울\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Busan\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"부산\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Incheon\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"인천\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Daejeon\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"대전\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Gyeonggi-do\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"경기\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Ulsan\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"울산\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Gwangju\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"광주\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Daegu\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"대구\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Sejong\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"세종\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Gangwon-do\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"강원\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Jeollabuk-do\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"전북\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Jeollanam-do\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"전남\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Chungcheongnam-do\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"충남\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Chungcheongbuk-do\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"충북\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Gyeongsangnam-do\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"경남\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Gyeongsangbuk-do\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"경북\"\n",
+        "    elif df_TimeProvince.iloc[i,2] == \"Jeju-do\":\n",
+        "        df_TimeProvince.iloc[i,2] = \"제주\"\n",
+        "\n",
+        "df_TimeProvince[\"confirmed_cum\"] = df_TimeProvince[\"confirmed\"]\n",
+        "df_TimeProvince[\"released_cum\"] = df_TimeProvince[\"released\"]\n",
+        "df_TimeProvince[\"deceased_cum\"] = df_TimeProvince[\"deceased\"]\n",
+        "\n",
+        "del df_TimeProvince[\"time\"]\n",
+        "\n",
+        "df_TimeProvince_Daegu = df_TimeProvince[df_TimeProvince[\"province\"]==\"대구\"]\n",
+        "df_TimeProvince_Jeollanam_do = df_TimeProvince[df_TimeProvince[\"province\"]==\"전남\"]\n",
+        "df_TimeProvince_Gwangju = df_TimeProvince[df_TimeProvince[\"province\"]==\"광주\"]\n",
+        "df_TimeProvince_Seoul = df_TimeProvince[df_TimeProvince[\"province\"]==\"서울\"]\n",
+        "df_TimeProvince_Jeollabuk_do = df_TimeProvince[df_TimeProvince[\"province\"]==\"전북\"]\n",
+        "df_TimeProvince_Incheon = df_TimeProvince[df_TimeProvince[\"province\"]==\"인천\"]\n",
+        "df_TimeProvince_Busan = df_TimeProvince[df_TimeProvince[\"province\"]==\"부산\"]\n",
+        "df_TimeProvince_Sejong = df_TimeProvince[df_TimeProvince[\"province\"]==\"세종\"]\n",
+        "df_TimeProvince_Gyeonggi_do = df_TimeProvince[df_TimeProvince[\"province\"]==\"경기\"]\n",
+        "df_TimeProvince_Ulsan = df_TimeProvince[df_TimeProvince[\"province\"]==\"울산\"]\n",
+        "df_TimeProvince_Chungcheongbuk_do = df_TimeProvince[df_TimeProvince[\"province\"]==\"충북\"]\n",
+        "df_TimeProvince_Jeju_do = df_TimeProvince[df_TimeProvince[\"province\"]==\"제주\"]\n",
+        "df_TimeProvince_Gyeongsangbuk_do = df_TimeProvince[df_TimeProvince[\"province\"]==\"경북\"]\n",
+        "df_TimeProvince_Daejeon = df_TimeProvince[df_TimeProvince[\"province\"]==\"대전\"]\n",
+        "df_TimeProvince_Chungcheongnam_do = df_TimeProvince[df_TimeProvince[\"province\"]==\"충남\"]\n",
+        "df_TimeProvince_Gyeongsangnam_do = df_TimeProvince[df_TimeProvince[\"province\"]==\"경남\"]\n",
+        "df_TimeProvince_Gangwon_do = df_TimeProvince[df_TimeProvince[\"province\"]==\"강원\"]\n"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "    date    test  negative  ...  confirmed_cum  released_cum  deceased_cum\n",
+            "40     2   94055     55723  ...           3150            28            17\n",
+            "71     3  316509    328163  ...           9786          5408           162\n",
+            "101    4  303372    272319  ...          10765          9059           247\n",
+            "132    5  607450    603741  ...          11468         10405           270\n",
+            "162    6  666316    636416  ...          12800         11537           282\n",
+            "\n",
+            "[5 rows x 11 columns]\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
