--- a/데이터_전처리.ipynb
+++ b/데이터_전처리.ipynb
@@ -6,7 +6,7 @@
       "name": "데이터_전처리.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNOptgjYLJEd8mL8/rX448b",
+      "authorship_tag": "ABX9TyOzo2LgVrQYdfgro4U+8soX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,24 +32,20 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 34
         },
-        "outputId": "8781cee4-e84b-4a7b-eb1b-218ebd7c9be4"
+        "outputId": "b11552fb-2a00-4582-b3bc-3e01c0972bce"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /gdrive\n"
+            "Drive already mounted at /gdrive; to attempt to forcibly remount, call drive.mount(\"/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -64,7 +60,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "9ea4ba2e-6096-444c-c89c-5a494326affb"
+        "outputId": "81ca470e-c90d-419d-d1d7-31c15b2d314f"
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -106,7 +102,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 700
         },
-        "outputId": "008bc463-7f80-4c82-a474-3c63c7512762"
+        "outputId": "fef29a31-78cf-4527-f4a7-8147a5ed50ae"
       },
       "source": [
         "import pandas as pd\n",
@@ -199,14 +195,14 @@
             "vlm_ratio         float64\n",
             "dtype: object\n",
             "==================================================\n",
-            "v2 :  17 ['세종', '광주', '전남', '대전', '전북', '경북', '부산', '서울', '제주', '경기', '충북', '울산', '강원', '인천', '충남', '경남', '대구']\n",
-            "gb3 :  4 ['스포츠활동', '여행', '취미오락', '문화예술활동']\n",
-            "gb2 :  28 ['유흥', '미용', '음악감상', '미술공예참여', '애완동물돌보기', '운동경기관람', '자전거', '스키', '스포츠용품구매', '사진촬영', '종교활동', '독서', '헬스', '공연관람', '숙박', '체험', '목욕', '레저스포츠', '관광쇼핑', '골프', '교통', '외식', '악기연주', '종합쇼핑', '교육훈련', '인터넷게임', '패션쇼핑', '여행사']\n",
+            "v2 :  17 ['충남', '충북', '대구', '전남', '제주', '광주', '경기', '경남', '대전', '경북', '인천', '부산', '강원', '전북', '울산', '세종', '서울']\n",
+            "gb3 :  4 ['문화예술활동', '스포츠활동', '취미오락', '여행']\n",
+            "gb2 :  28 ['레저스포츠', '독서', '목욕', '자전거', '여행사', '스포츠용품구매', '교육훈련', '종교활동', '패션쇼핑', '미용', '체험', '애완동물돌보기', '교통', '음악감상', '종합쇼핑', '운동경기관람', '유흥', '외식', '헬스', '숙박', '인터넷게임', '공연관람', '미술공예참여', '사진촬영', '골프', '관광쇼핑', '스키', '악기연주']\n",
             "sex_ccd :  2 ['F', 'M']\n",
             "cln_age_r :  5 [40, 50, 20, 60, 30]\n",
             "ta_ym :  5 [2, 3, 4, 5, 6]\n",
-            "daw_ccd_r :  2 ['WHITE', 'RED']\n",
-            "apv_ts_dl_tm_r :  3 ['취침', '활동', '휴식']\n"
+            "daw_ccd_r :  2 ['RED', 'WHITE']\n",
+            "apv_ts_dl_tm_r :  3 ['활동', '휴식', '취침']\n"
           ],
           "name": "stdout"
         }
@@ -221,7 +217,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 340
         },
-        "outputId": "ee345a47-2a5e-4c22-9d5b-bbba4815b4cb"
+        "outputId": "8b13a408-efe6-4838-c857-e5daea632200"
       },
       "source": [
         "import pandas as pd\n",
@@ -270,7 +266,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "outputId": "4f4b1061-d08c-4ade-ca73-417e00e8c26f"
+        "outputId": "609281b0-530b-46de-c54b-0e228696dd8e"
       },
       "source": [
         "import pandas as pd\n",
@@ -340,7 +336,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "23e3ec7c-8076-45ee-e2da-80a95cdddb7d"
+        "outputId": "242adc5c-14b6-4778-b794-ade7b595099d"
       },
       "source": [
         "import pandas as pd\n",
@@ -824,33 +820,7 @@
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "     date province  confirmed  ...  confirmed_diff  released_diff  deceased_diff\n",
-            "680     2       서울   0.790801  ...        0.790801       0.092431       0.000000\n",
-            "1207    3       서울   3.832065  ...        3.040995       0.914353       0.000000\n",
-            "1717    4       서울   1.881402  ...       -1.953369       2.549660       0.020562\n",
-            "2244    5       서울   2.344595  ...        0.462749      -1.768729       0.000000\n",
-            "2754    6       서울   4.639514  ...        2.294039       1.892839       0.010287\n",
-            "...   ...      ...        ...  ...             ...            ...            ...\n",
-            "696     2       제주   0.298118  ...        0.298118       0.000000       0.000000\n",
-            "1223    3       제주   1.043985  ...        0.745703       0.447422       0.000000\n",
-            "1733    4       제주   0.596485  ...       -0.447364       0.298243       0.000000\n",
-            "2260    5       제주   0.298155  ...       -0.298155       0.000000       0.000000\n",
-            "2770    6       제주   0.595845  ...        0.297922      -0.297922       0.000000\n",
-            "\n",
-            "[85 rows x 11 columns]\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:221: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -883,6 +853,26 @@
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "     date province  confirmed  ...  confirmed_diff  released_diff  deceased_diff\n",
+            "680     2       서울   0.790801  ...        0.790801       0.092431       0.000000\n",
+            "1207    3       서울   3.832065  ...        3.040995       0.914353       0.000000\n",
+            "1717    4       서울   1.881402  ...       -1.953369       2.549660       0.020562\n",
+            "2244    5       서울   2.344595  ...        0.462749      -1.768729       0.000000\n",
+            "2754    6       서울   4.639514  ...        2.294039       1.892839       0.010287\n",
+            "...   ...      ...        ...  ...             ...            ...            ...\n",
+            "696     2       제주   0.298118  ...        0.298118       0.000000       0.000000\n",
+            "1223    3       제주   1.043985  ...        0.745703       0.447422       0.000000\n",
+            "1733    4       제주   0.596485  ...       -0.447364       0.298243       0.000000\n",
+            "2260    5       제주   0.298155  ...       -0.298155       0.000000       0.000000\n",
+            "2770    6       제주   0.595845  ...        0.297922      -0.297922       0.000000\n",
+            "\n",
+            "[85 rows x 11 columns]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -895,7 +885,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 765
         },
-        "outputId": "e134ce10-cc55-4b4a-8525-93a899fa262e"
+        "outputId": "ca8312b9-8c2f-456c-a3b6-4b5674ae4d49"
       },
       "source": [
         "print(df.dtypes)\n",
@@ -963,9 +953,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 918
+          "height": 459
         },
-        "outputId": "88ac1414-bfdd-4bee-f25b-f410df14f97b"
+        "outputId": "908f71d4-bd3c-4613-b539-3912e4e37969"
       },
       "source": [
         "df = pd.merge(df,df_Time,left_on=[\"ta_ym\"],right_on=[\"date\"],how=\"left\")\n",
@@ -980,6 +970,15 @@
         "del df['date_y']\n",
         "del df['province']\n",
         "\n",
+        "df = pd.merge(df,pd.get_dummies(df.v2),left_index=True,right_index=True,how=\"left\")\n",
+        "df = pd.merge(df,pd.get_dummies(df.gb3),left_index=True,right_index=True,how=\"left\")\n",
+        "df = pd.merge(df,pd.get_dummies(df.gb2),left_index=True,right_index=True,how=\"left\")\n",
+        "df = pd.merge(df,pd.get_dummies(df.sex_ccd),left_index=True,right_index=True,how=\"left\")\n",
+        "df = pd.merge(df,pd.get_dummies(df.cln_age_r),left_index=True,right_index=True,how=\"left\")\n",
+        "df = pd.merge(df,pd.get_dummies(df.ta_ym),left_index=True,right_index=True,how=\"left\")\n",
+        "df = pd.merge(df,pd.get_dummies(df.daw_ccd_r),left_index=True,right_index=True,how=\"left\")\n",
+        "df = pd.merge(df,pd.get_dummies(df.apv_ts_dl_tm_r),left_index=True,right_index=True,how=\"left\")\n",
+        "\n",
         "print(df)\n",
         "print(df.dtypes)"
       ],
@@ -988,59 +987,32 @@
         {
           "output_type": "stream",
           "text": [
-            "        v2     gb3   gb2  ... confirmed_diff released_diff deceased_diff\n",
-            "0       강원  문화예술활동  공연관람  ...       0.454687      0.000000           0.0\n",
-            "1       강원  문화예술활동  공연관람  ...       0.454687      0.000000           0.0\n",
-            "2       강원  문화예술활동  공연관람  ...       0.454687      0.000000           0.0\n",
-            "3       강원  문화예술활동  공연관람  ...       0.454687      0.000000           0.0\n",
-            "4       강원  문화예술활동  공연관람  ...       0.454687      0.000000           0.0\n",
-            "...     ..     ...   ...  ...            ...           ...           ...\n",
-            "102780  충북    취미오락  패션쇼핑  ...       0.876803     -0.688917           0.0\n",
-            "102781  충북    취미오락  패션쇼핑  ...      -0.625942      0.187782           0.0\n",
-            "102782  충북    취미오락  패션쇼핑  ...      -0.625942      0.187782           0.0\n",
-            "102783  충북    취미오락  패션쇼핑  ...      -0.625942      0.187782           0.0\n",
-            "102784  충북    취미오락  패션쇼핑  ...      -0.625942      0.187782           0.0\n",
+            "        v2     gb3   gb2 sex_ccd cln_age_r ta_ym  ...  6 RED  WHITE  취침  활동  휴식\n",
+            "0       강원  문화예술활동  공연관람       F        20     2  ...  0   1      0   0   1   0\n",
+            "1       강원  문화예술활동  공연관람       F        20     2  ...  0   1      0   0   0   1\n",
+            "2       강원  문화예술활동  공연관람       F        20     2  ...  0   0      1   1   0   0\n",
+            "3       강원  문화예술활동  공연관람       F        20     2  ...  0   0      1   0   1   0\n",
+            "4       강원  문화예술활동  공연관람       F        20     2  ...  0   0      1   0   0   1\n",
+            "...     ..     ...   ...     ...       ...   ...  ... ..  ..    ...  ..  ..  ..\n",
+            "102780  충북    취미오락  패션쇼핑       M        60     5  ...  0   0      1   0   0   1\n",
+            "102781  충북    취미오락  패션쇼핑       M        60     6  ...  1   1      0   0   1   0\n",
+            "102782  충북    취미오락  패션쇼핑       M        60     6  ...  1   1      0   0   0   1\n",
+            "102783  충북    취미오락  패션쇼핑       M        60     6  ...  1   0      1   0   1   0\n",
+            "102784  충북    취미오락  패션쇼핑       M        60     6  ...  1   0      1   0   0   1\n",
             "\n",
-            "[102785 rows x 38 columns]\n",
-            "v2                            object\n",
-            "gb3                           object\n",
-            "gb2                           object\n",
-            "sex_ccd                       object\n",
-            "cln_age_r                     object\n",
-            "ta_ym                         object\n",
-            "daw_ccd_r                     object\n",
-            "apv_ts_dl_tm_r                object\n",
-            "vlm20                        float64\n",
-            "usec20                       float64\n",
-            "vlm19                        float64\n",
-            "usec19                       float64\n",
-            "vlm_usec_ratio               float64\n",
-            "vlm_ratio                    float64\n",
-            "nationwide_test              float64\n",
-            "nationwide_negative          float64\n",
-            "nationwide_confirmed         float64\n",
-            "nationwide_released          float64\n",
-            "nationwide_deceased          float64\n",
-            "nationwide_test_cum          float64\n",
-            "nationwide_negative_cum      float64\n",
-            "nationwide_confirmed_cum     float64\n",
-            "nationwide_released_cum      float64\n",
-            "nationwide_deceased_cum      float64\n",
-            "nationwide_test_diff         float64\n",
-            "nationwide_negative_diff     float64\n",
-            "nationwide_confirmed_diff    float64\n",
-            "nationwide_released_diff     float64\n",
-            "nationwide_deceased_diff     float64\n",
-            "confirmed                    float64\n",
-            "released                     float64\n",
-            "deceased                     float64\n",
-            "confirmed_cum                float64\n",
-            "released_cum                 float64\n",
-            "deceased_cum                 float64\n",
-            "confirmed_diff               float64\n",
-            "released_diff                float64\n",
-            "deceased_diff                float64\n",
-            "dtype: object\n"
+            "[102785 rows x 104 columns]\n",
+            "v2           object\n",
+            "gb3          object\n",
+            "gb2          object\n",
+            "sex_ccd      object\n",
+            "cln_age_r    object\n",
+            "              ...  \n",
+            "RED           uint8\n",
+            "WHITE         uint8\n",
+            "취침            uint8\n",
+            "활동            uint8\n",
+            "휴식            uint8\n",
+            "Length: 104, dtype: object\n"
           ],
           "name": "stdout"
         }
